[package]
name = "hooker"
description = "Webhook proxy for automatic docker deployments"
license = "MPL-2.0"
repository = "https://github.com/lmaotrigine/hooker"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20" }
axum-realip = { git = "https://git.5ht2.me/lmaotrigine/axum-realip", version = "0.1.0" }
color-eyre = "0.6.2"
hmac = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "process", "signal"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
